--- a/DataMining1.ipynb
+++ b/DataMining1.ipynb
@@ -2123,7 +2123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we can see that the histogram is right / positive skewd. The most applicants for credit are between age 20 and 30. Lookingv at the histogram we can see some outliers (according to the definition based on boxplot interpretation), we can say that very few people decide to take a loan around the age of 70. "
+    "Here we can see that the histogram is right / positive skewd. The most applicants for credit are between age 20 and 30. Looking at the histogram we can see some outliers (according to the definition based on boxplot interpretation), we can say that very few people decide to take a loan around the age of 70. "
    ]
   },
   {
@@ -4573,7 +4573,7 @@
    "outputs": [],
    "source": [
     "# top 7 features subset\n",
-    "top7_LR = list(LR_FI_ada.sort_values(by='Importance', ascending=False).head(7)['Feature'])\n",
+    "top7_LR = list(LR_FI.sort_values(by='Importance', ascending=False).head(7)['Feature'])\n",
     "\n",
     "X_top7_LR = df_comb[top7_LR].values\n",
     "X_train_top7_LR, X_test_top7_LR, y_train_top7_LR, y_test_top7_LR = train_test_split(X_top7_LR , y, test_size=0.3, random_state=42)\n",
@@ -4776,7 +4776,7 @@
     "\n",
     "**2. Effect of ADASYN Sampling:**\n",
     "\n",
-    "* ADASYN sampling significantly boosts sensitivity, as evidenced by higher F1 and F2 scores in both Top 7 Features and All Features models. This suggests ADASYN is effective in improving the model's ability to identify positive instances (defaults), although it does come at the cost of lower specificity and accuracy.\n",
+    "* **ADASYN sampling significantly boosts sensitivity**, as evidenced by higher F1 and F2 scores in both Top 7 Features and All Features models. **This suggests ADASYN is effective in improving the model's ability to identify positive instances (defaults)**, although it does come at the cost of lower specificity and accuracy.\n",
     "\n",
     "**3. Sensitivity vs. Specificity:**\n",
     "\n",
@@ -5215,7 +5215,7 @@
     "\n",
     "**5. Model Choice:**\n",
     "\n",
-    "* The KNN model with Lasso features and ADASYN consistently outperformed other configurations in terms of cost, sensitivity, and overall accuracy, making it the most suitable choice for this specific credit scoring task. The improvement in these metrics highlights the importance of using both feature selection and class balancing methods to enhance model performance in real-world scenarios with imbalanced datasets."
+    "* The KNN model with Lasso features and ADASYN, as explained in the points above."
    ]
   },
   {
@@ -5533,7 +5533,7 @@
     "\n",
     "**4. Decision Trees with All Features and ADASYN:**\n",
     "\n",
-    "This configuration offers a balanced trade-off between sensitivity and specificity. It provides better sensitivity than the non-ADASYN models, meaning it correctly identifies more defaults. However, specificity is slightly reduced, leading to more false positives. The improved F1 and F2 scores suggest that this model performs well in managing both precision and recall. The overall cost is moderate, suggesting a balanced and effective model.\n",
+    "This configuration offers a balanced trade-off between sensitivity and specificity. It provides better sensitivity than the non-ADASYN models, meaning it correctly identifies more defaults. However, this model performs slightly worse compared to Top % Features and ADASYn model in terms of F1/ f2 scores, sensitivity and most importantly cost.\n",
     "\n",
     "**Summary:**\n",
     "\n",
@@ -5545,22 +5545,15 @@
     "\n",
     "ADASYN sampling significantly improves sensitivity across the models, as shown by higher F1 and F2 scores. This indicates better identification of defaults, crucial for applications like credit risk assessment. However, this improvement in sensitivity usually comes at the cost of specificity, as the model becomes more prone to false positives.\n",
     "\n",
-    "**3. Sensitivity vs. Specificity:**\n",
-    "\n",
-    "Sensitivity Improvement: Models with ADASYN show a marked increase in sensitivity, which is critical for correctly identifying positive cases (defaults). This makes these models particularly valuable in scenarios where the cost of missing a default is high.\n",
-    "Specificity Trade-off: The increase in sensitivity comes with a decrease in specificity, indicating a higher rate of false positives. This trade-off must be managed depending on the application, particularly where false positives carry a significant cost.\n",
-    "\n",
-    "**4. Cost Efficiency:**\n",
+    "**3. Cost Efficiency:**\n",
     "\n",
     "Models utilizing ADASYN are generally more cost-efficient, primarily because they reduce the number of false negatives, which are often more costly in financial contexts. This reduction in cost makes these models more appealing despite the potential trade-off with specificity.\n",
     "\n",
-    "**5. Model Choice:**\n",
+    "**4. Model Choice:**\n",
     "\n",
-    "* Best Performing Model: The decision tree model with top 5 features and ADASYN sampling is the most balanced, showing high sensitivity and improved F1/F2 scores with a reduced cost. This model is ideal for scenarios requiring a balance between identifying defaults and managing false positives.\n",
+    "* **Best Performing Model**: The decision tree model with top 5 features and ADASYN sampling is the most balanced, showing high sensitivity and improved F1/F2 scores with a reduced cost. This model is ideal for scenarios requiring a balance between identifying defaults and managing false positives.\n",
     "\n",
-    "* For Prioritizing Sensitivity: In contexts where it is crucial to minimize missed defaults, the models with ADASYN sampling (either top 5 features or all features) are recommended due to their higher sensitivity.\n",
-    "\n",
-    "* For Balanced Performance: The decision tree model with all features and ADASYN offers a good compromise, balancing accuracy, sensitivity, and cost. It is suitable for situations where both the identification of defaults and the minimization of false positives are important."
+    "* **For Balanced Performance:** The decision tree model with all features and ADASYN offers a good compromise, balancing accuracy, sensitivity, and cost. It is suitable for situations where both the identification of defaults and the minimization of false positives are important."
    ]
   },
   {
@@ -5607,6 +5600,17 @@
    "metadata": {},
    "source": [
     "## Results Summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to summarise all of the proposed models i have prepared a couple of bar charts, which help to visually comapare all models using different statistics. Comapred metrics include:\n",
+    "* $F_1$ score, \n",
+    "* Specificity & sensitivity,\n",
+    "* Accuracy,\n",
+    "* Cost."
    ]
   },
   {
@@ -5854,6 +5858,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### $F_1$ Score Comaprison\n",
+    "\n",
+    "* As mentioned earlier the use of ADASYN sampling leads to a significant improvement in the $F_1$ score regardless of classification model type. \n",
+    "\n",
+    "* Aside from Logistic Regression, another step of carefully performed feature selection helps to improve the metric score.  \n",
+    "\n",
+    "Top 3 best models include:\n",
+    "* Decision Trees with Top 5 Features ADASYN,\n",
+    "* Decision Trees with All Features ADASYN, \n",
+    "* KNN Lasso Features ADASYN. \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 539,
    "metadata": {},
@@ -5880,9 +5900,25 @@
     }
    ],
    "source": [
-    "df_groups_s = df_results[['model_name', 'specificity', 'sensitivity']].groupby(['model_name']).sum().sort_values(by = \"sensitivity\", ascending = False)#['f1_test'].sum().sort_values()\n",
+    "df_groups_s = df_results[['model_name', 'specificity', 'sensitivity']].groupby(['model_name']).sum().sort_values(by = \"sensitivity\", ascending = False)\n",
     "df_groups_s\n",
     "df_results.plot(x=\"model_name\", y=[\"specificity\", \"sensitivity\"], ylabel = \"\" ,kind=\"barh\", figsize=(12, 8), title = \"Specificity & Sensitivity Comparison\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sensitivity vs. Specificity Comparison.\n",
+    "\n",
+    "Here the specificity vs. sensitivity trade-off is clearly visible. Since identifying defaulters is more valuabe than identifying non-defaulters, in this case improving sensitivity is considered a priority.  \n",
+    "\n",
+    "Top 3 best models include:\n",
+    "* Decision Trees with Top 5 Features ADASYN,\n",
+    "* Logistic Regression with All Features ADASYN, \n",
+    "* Logistic Regression Top 7 Features ADASYN.\n",
+    "\n",
+    "For all of these Decision Trees with Top 5 Features ADASYN, Logistic Regression with All Features ADASYN both sensitivity & specificity remain above 0.6. Logistic Regression Top 7 Features ADASYN has the highest sensitivity overall."
    ]
   },
   {
@@ -5916,6 +5952,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Accuarcy Comaprison\n",
+    "\n",
+    "Given the imbalanced data, accuracy is not the most reliable metric for model comparison, as it does not differentiate between false positives and false negatives. Nevertheless, the accuracy differences across models are relatively small, ranging from 0.6 to about 0.73. Interestingly, the highest accuracy scores come from models without ADASYN sampling or additional feature selection steps."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 541,
    "metadata": {},
@@ -5943,6 +5988,19 @@
    ],
    "source": [
     "df_results.plot(x=\"model_name\", y=[\"cost\"], ylabel = \"\" ,kind=\"barh\", figsize=(12, 8), title = \"Cost Comparison\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cost Comparison\n",
+    "\n",
+    "In this analysis, minimizing cost is the primary goal, making models with ADASYN sampling the most effective. The difference in cost between models using ADASYN is minimal, highlighting the consistency of this sampling method in reducing costs. The overall best performer is the Decision Tree model with the top 5 features, closely followed by Logistic Regression models. On the other hand, KNN models demonstrate the lowest performance in terms of cost, particularly those without ADASYN.\n",
+    "\n",
+    "### Final Model Recomendation\n",
+    "\n",
+    "Taking into account all of the discussed metrics, the best model for this scenario prioritizing sensitivity while balancing specificity, having the highest $F_1$ score and cost is **Decision Tree Model with Top 5 features and ADASYN sampling**. "
    ]
   }
  ],
