Correction in markdown

--- a/DataMining1.ipynb
+++ b/DataMining1.ipynb
@@ -6000,7 +6000,17 @@
     "\n",
     "### Final Model Recomendation\n",
     "\n",
-    "Taking into account all of the discussed metrics, the best model for this scenario prioritizing sensitivity while balancing specificity, having the highest $F_1$ score and cost is **Decision Tree Model with Top 5 features and ADASYN sampling**. "
+    "Taking into account all of the discussed metrics, the best model for this scenario prioritizing sensitivity while balancing specificity, having the highest $F_1$ score and cost is **Decision Tree Model with Top 5 features and ADASYN sampling**. \n",
+    "\n",
+    "### References\n",
+    "\n",
+    "\n",
+    "* **Data Set** : https://archive.ics.uci.edu/dataset/144/statlog+german+credit+data\n",
+    "\n",
+    "* **Decision Trees** : https://scikit-learn.org/stable/modules/tree.html\n",
+    "* **Logistic Regression classifier** : https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html#sklearn.linear_model.LogisticRegression\n",
+    "* **KNN Classifier** : https://scikit-learn.org/stable/modules/generated/sklearn.neighbors.KNeighborsClassifier.html#sklearn.neighbors.KNeighborsClassifier\n",
+    "* **ADASYN Sampling** : https://imbalanced-learn.org/stable/references/generated/imblearn.over_sampling.ADASYN.html"
    ]
   }
  ],
